--- a/.github/workflows/build-android-app.yml
+++ b/.github/workflows/build-android-app.yml
@@ -26,12 +26,12 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18'
-          cache: 'yarn'
+          # cache: 'yarn'
 
-      - name: Run Yarn Install
+      - name: Run NPM Install
         run: |
              npm i -g corepack
-             yarn install
+             npm install
 
       - name: Build application
         run: |
