--- a/.github/workflows/build-android-app.yml
+++ b/.github/workflows/build-android-app.yml
@@ -39,11 +39,11 @@ jobs:
       - name: Build application
         run: |
              cd android
-             ./gradlew assembleRelease
+             ./gradlew bundleRelease
 
       - name: Upload application
         uses: actions/upload-artifact@v2
         with:
           name: app
-          path: android/app/build/outputs/apk/release/app-release.apk
+          path: android/app/build/outputs/bundle/release/app-release.aab
           retention-days: 3
