--- a/.github/workflows/build-android-aab.yml
+++ b/.github/workflows/build-android-aab.yml
@@ -40,9 +40,19 @@ jobs:
              cd android
              ./gradlew bundleRelease
 
+      - name: Sign App Bundle
+        id: sign_app
+        uses: r0adkll/sign-android-release@v1
+        with:
+          releaseDirectory: android/app/build/outputs/bundle/release
+          signingKeyBase64: ${{ secrets.ANDROID_SIGNING_KEY }}
+          alias: ${{ secrets.ANDROID_SIGNING_ALIAS }}
+          keyStorePassword: ${{ secrets.ANDROID_SIGNING_STORE_PASSWORD }}
+          keyPassword: ${{ secrets.ANDROID_SIGNING_KEY_PASSWORD }}
+
       - name: Upload application
         uses: actions/upload-artifact@v2
         with:
-          name: app-release.aab
-          path: android/app/build/outputs/bundle/release/app-release.aab
+          name: app-release-signed-aab
+          path: ${{steps.sign_app.outputs.signedReleaseFile}}
           retention-days: 3
