--- a/.github/workflows/build-android-apk.yml
+++ b/.github/workflows/build-android-apk.yml
@@ -3,7 +3,7 @@ name: "Build Android apk"
 on:
   push:
     branches:
-      - main-random-branch
+      - main
 
 jobs:
   build:
@@ -39,10 +39,20 @@ jobs:
         run: |
              cd android
              ./gradlew assembleRelease
+      
+      - name: Sign App Bundle
+        id: sign_app
+        uses: r0adkll/sign-android-release@v1
+        with:
+          releaseDirectory: android/app/build/outputs/bundle/release
+          signingKeyBase64: ${{ secrets.ANDROID_SIGNING_KEY }}
+          alias: ${{ secrets.ANDROID_SIGNING_ALIAS }}
+          keyStorePassword: ${{ secrets.ANDROID_SIGNING_STORE_PASSWORD }}
+          keyPassword: ${{ secrets.ANDROID_SIGNING_KEY_PASSWORD }}
 
       - name: Upload application
         uses: actions/upload-artifact@v2
         with:
-          name: app-release.apk
-          path: android/app/build/outputs/apk/release/app-release.apk
+          name: app-release-signed-apk
+          path: ${{steps.sign_app.outputs.signedReleaseFile}}
           retention-days: 3
